Implementada la pestaña MisPokemons con RecyclerView y datos de Firebase

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
-    <string name="app_name">Tarea_03BLL</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="error_empty_fields">Por favor, introduce el correo y la contraseña.</string>
     <string name="login_success">Login correcto</string>
     <string name="login_failed">Authentication failed.</string>
     <string name="register_success">Registro correcto</string>
     <string name="register_failed">Authentication failed.</string>
+    <string name="pokemon_indice">Índice: </string>
+    <string name="pokemon_tipos">Tipos: </string>
+    <string name="pokemon_peso">Peso: </string>
+    <string name="pokemon_altura">Altura: </string>
 </resources>
